
2024-07-29  Chuck Haatvedt <chuck.haatvedt+cobol@gmail.com>

	* tree.c (cb_build_picture): added logic to find the valid floating
	  symbol if one exists and pass that symbol to the downstream functions
	* tree.c (valid_char_order): adjust the precedence in an ambigous
	  where +$9 or 9$+ to identify the condition of the $ correctly
	  to fix bug #935
	* tree.c (find_floating_insertion_str): generate a compile error
	  if an invalid symbol is found between the float symbols; this also
	  allows the COBOL 2023 standard to be more closely followed for
	  display numeric edited picture strings
	* tree.c (char_to_precedence_idx): changed to check penultimate and last
	  symbols before the first and second symbols

2024-07-26  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y, config.def: rewrite ENVIRONMENT DIVISION parsing to allow
	  non-standard order of CONFIGURATION and INPUT-OUTPUT sections,
	  depending on dialect setting "incorrect-conf-sec-order"
	* reserved.c: make MENU context-sensitive
	* reserved.c, parser.y: added MODAL + MODELESS to acu extension windows

2024-07-10  Chuck Haatvedt <chuck.haatvedt+cobol@gmail.com>

	* tree.c (cb_build_picture): fixed currency scale counting logic

2024-06-19  David Declerck <david.declerck@ocamlpro.com>

	* cobc.c (process_compile): fix MSVC build command

2024-06-11  Chuck Haatvedt <chuck.haatvedt+cobol@gmail.com>

	* tree.c (cb_build_picture): fixed currency digit counting logic

2024-05-15  Simon Sobisch <simonsobisch@gnu.org>

	* replace.c: fix compile warnings and formatting

2024-05-14  David Declerck <david.declerck@ocamlpro.com>

	* flag.def: fix macro usage for MSVC

2024-05-14  Simon Sobisch <simonsobisch@gnu.org>

	* tree.h: inclusion of cobc.h for types
	* codeoptim.c, config.c, error.c, field.c, replace.c, reserved.c:
	  dropped unused header ctype
	* codeoptim.c: dropped unused headers stdlib and string

2024-05-03  Simon Sobisch <simonsobisch@gnu.org>
